@@ -65,6 +65,10 @@ class TestScopeManager(unittest.TestCase):
         self.assertRaises(inject.UndefinedScopeError,
                           lambda: self.scope_manager._get_context('MyScope'))
 
+    def test_exit_scope_error(self):
+        self.assertRaises(inject.UndefinedScopeError,
+                          lambda: self.scope_manager.exit_scope('MyScope'))
+
     def test_enter_exit_scope_with_context(self):
         context = dict(test='test')
         self.scope_manager.enter_scope('MyScope', context)
