@@ -15,3 +15,6 @@ Changelog
 * The locking mechanism is now available for all scopes.
 * The context manager is now responsible for updating the context dictionaries.
 * Fixed duplicate factory calls when providing a factory returning None
+* ScopeManager.exit_scope now raise a UndefinedScopeError when exiting an
+  undeclared scope
+* Fixed the API documentation
